記事タイトル

--- a/src/content/blog/recommended-post.mdx
+++ b/src/content/blog/recommended-post.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Astroで作る爆速エンジニアブログ"
+title: "【テスト記事】Astroで作る爆速エンジニアブログ"
 pubDate: 2026-02-25
 eyecatch: "https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&w=800&q=80"
 tags: ["Astro", "JavaScript"]
