--- a/src/content/blog/second-post.mdx
+++ b/src/content/blog/second-post.mdx
@@ -1,5 +1,5 @@
 ---
-title: "最近買ったお気に入りガジェットレビュー"
+title: "【テスト記事】最近買ったお気に入りガジェットレビュー"
 pubDate: 2026-02-20
 eyecatch: "https://images.unsplash.com/photo-1525547719571-a2d4ac8945e2?auto=format&fit=crop&w=800&q=80"
 tags: ["Gadget", "Review"]
